# Healthcare_Data-QC-Sandbox

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.local.yaml  config.yaml
config/suites/ohiohealth/: ed.yaml  inpatient.yaml
deploy/: cloudwatch-agent.json  dashboard.service  iam_publisher_policy.json  qc.service  qc.timer
docs/superpowers/plans/: 2026-07-17-healthcare-qc-pipeline.md
docs/superpowers/specs/: 2026-07-17-healthcare-qc-pipeline-design.md
scripts/: .gitignore  bootstrap_ec2.sh  poll_and_run.sh  run_dashboard.sh  seed_demo.py  setup_athena.sql
src/qc/: main.py
src/qc/alert/: notify.py
src/qc/checks/: dedup.py  logic.py  missing.py  ranges.py  referential.py  registry.py  timestamp.py  types.py
src/qc/dashboard/: app.py  loader.py
src/qc/dashboard/templates/: base.html  config.html  issues.html  summary.html  trends.html
src/qc/ingest/: reader.py
src/qc/metrics/: store.py
src/qc/report/: publisher.py  writer.py
src/qc/temporal/: compare.py
tests/: conftest.py  test_checks_dedup.py  test_checks_logic.py  test_checks_missing.py  test_checks_ranges.py  test_checks_referential.py  test_checks_timestamp.py  test_checks_types.py  test_integration.py  test_metrics_store.py  test_registry.py  test_report_writer.py  test_temporal_compare.py
