[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-qc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15",
    "duckdb>=0.10",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "flask>=3.0",
    "gunicorn>=21",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "moto[s3]>=5"]

[tool.setuptools.packages.find]
where = ["src"]
